@@ -256,6 +256,7 @@ SRC
 end
 
 def arg_config(config, default=nil)
+  return default if /mswin32/i =~ PLATFORM
   unless defined? $configure_args
     $configure_args = {}
     for arg in ENV["CONFIGURE_ARGS"].split
